Adds trailing comma to comply with style-guides

--- a/.prettierrc
+++ b/.prettierrc
@@ -5,7 +5,7 @@
     "arrowParens": "avoid",
     "bracketSpacing": true,
     "useTabs": false,
-    "trailingComma": "none",
+    "trailingComma": "es5",
     "jsxBracketSameLine": false,
     "singleQuote": false,
     "jsxSingleQuote": false
