--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,30 +4,15 @@
     "private": true,
     "dependencies": {
         "font-awesome": "4.7.0",
-        "@cthit/react-digit-components": "^1.0.0-beta.13",
-        "@date-io/date-fns": "^1.1.0",
-        "@material-ui/core": "^3.9.2",
-        "@material-ui/icons": "^3.0.2",
-        "date-fns": "2.0.0-alpha.27",
-        "formik": "^1.5.1",
-        "jss": "^9.8.7",
-        "lodash": "^4.17.11",
-        "material-ui-image": "^3.1.0",
-        "material-ui-pickers": "^2.2.4",
-        "prop-types": "^15.7.2",
-        "react": "^16.8.5",
-        "react-dom": "^16.8.5",
-        "react-jss": "^8.6.1",
-        "react-markdown": "^4.0.6",
-        "react-redux": "^6.0.1",
-        "react-router": "^5.0.0",
-        "react-router-dom": "^5.0.0",
-        "react-scripts": "2.1.8",
-        "react-select": "^2.4.2",
-        "redux": "^4.0.1",
-        "redux-thunk": "^2.3.0",
-        "styled-components": "^4.2.0",
-        "yup": "^0.27.0"
+        "@cthit/react-digit-components": "^1.0.0-beta.40",
+        "@babel/runtime": "7.5.4",
+        "react": "^16.9.0",
+        "react-dom": "^16.9.0",
+        "react-redux": "^7.1.0",
+        "react-router": "^5.0.1",
+        "react-router-dom": "^5.0.1",
+        "redux": "^4.0.4",
+        "styled-components": "^4.3.2"
     },
     "scripts": {
         "start": "react-scripts start",
