--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
         "@babel/runtime": "7.5.4",
         "react": "^16.10.2",
         "react-dom": "^16.10.2",
+        "react-scripts": "4.0.0",
         "react-redux": "^7.1.0",
         "react-router": "^5.0.1",
         "react-router-dom": "^5.0.1",
