--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,15 +3,16 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "font-awesome": "4.7.0",
-        "@cthit/react-digit-components": "^1.0.0-beta.42",
         "@babel/runtime": "7.5.4",
+        "@cthit/react-digit-components": "^1.0.3",
+        "axios": "^0.21.1",
+        "font-awesome": "4.7.0",
         "react": "^16.10.2",
         "react-dom": "^16.10.2",
-        "react-scripts": "4.0.0",
         "react-redux": "^7.1.0",
         "react-router": "^5.0.1",
         "react-router-dom": "^5.0.1",
+        "react-scripts": "4.0.0",
         "redux": "^4.0.4",
         "styled-components": "^4.3.2"
     },
