--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,35 +3,25 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@babel/runtime": "7.5.4",
         "@cthit/react-digit-components": "^1.0.3",
         "axios": "^0.21.1",
         "font-awesome": "4.7.0",
         "react": "^16.10.2",
         "react-dom": "^16.10.2",
-        "react-redux": "^7.1.0",
-        "react-router": "^5.0.1",
         "react-router-dom": "^5.0.1",
         "react-scripts": "4.0.0",
-        "redux": "^4.0.4",
         "styled-components": "^4.3.2"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "BROWSER=none react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
-    },
-    "eslintConfig": {
-        "extends": "react-app"
     },
     "browserslist": [
         ">0.2%",
         "not dead",
         "not ie <= 11",
         "not op_mini all"
-    ],
-    "devDependencies": {
-        "prettier": "1.18.2"
-    }
+    ]
 }
