--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,13 +4,12 @@
     "private": true,
     "dependencies": {
         "@cthit/react-digit-components": "^1.0.3",
-        "axios": "^0.21.1",
         "font-awesome": "4.7.0",
-        "react": "^16.10.2",
-        "react-dom": "^16.10.2",
-        "react-router-dom": "^5.0.1",
-        "react-scripts": "4.0.0",
-        "styled-components": "^4.3.2"
+        "axios": "0.21.1",
+        "react": "17.0.1",
+        "react-dom": "17.0.1",
+        "react-router-dom": "5.2.0",
+        "styled-components": "5.2.1"
     },
     "scripts": {
         "start": "BROWSER=none react-scripts start",
