--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,15 +4,16 @@
     "private": true,
     "dependencies": {
         "@cthit/react-digit-components": "^1.0.3",
-        "font-awesome": "4.7.0",
         "axios": "0.21.2",
+        "cross-env": "^7.0.3",
+        "font-awesome": "4.7.0",
         "react": "17.0.1",
         "react-dom": "17.0.1",
         "react-router-dom": "5.2.0",
         "styled-components": "5.2.1"
     },
     "scripts": {
-        "start": "BROWSER=none react-scripts start",
+        "start": "cross-env BROWSER=none react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
@@ -22,5 +23,8 @@
         "not dead",
         "not ie <= 11",
         "not op_mini all"
-    ]
+    ],
+    "devDependencies": {
+        "react-scripts": "4.0.3"
+    }
 }
